--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "element": "^0.1.4",
     "element-plus": "^1.2.0-beta.5",
-    "vue": "^3.2.16",
-    "vue-router": "^4.0.12"
+    "vue": "^3.2.26",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
