--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.4",
     "element-plus": "^1.2.0-beta.5",
     "vue": "^3.2.26",
     "vue-router": "^4.0.12",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
+    "js-cookie": "^3.0.1",
     "vite": "^2.6.4"
   }
 }
