--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.4",
+    "axios": "^0.24.0",
     "element-plus": "^1.2.0-beta.5",
     "vue": "^3.2.26",
+    "vue-axios": "^3.4.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
